feat: add segurança

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,21 @@
 spring.application.name=api-transacao
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/transaction
+spring.datasource.username=italoui
+spring.datasource.password=1345
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+# JPA (use validate/none com Flyway)
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+#JWT
+api.security.token.secret=${JWT_SECRET:my-secret-test}
