--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=api-transacao
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/transaction
-spring.datasource.username=italoui
-spring.datasource.password=1345
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/transaction}
+spring.datasource.username=${DATABASE_USERNAME:italoui}
+spring.datasource.password=${DATABASE_PASSWORD:1345}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Flyway
